--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cookpedia",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,23 +10,36 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.10.1",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/core": "^3.0.10",
+    "@gluestack-ui/themed": "^1.1.73",
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.3.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.20",
+    "expo-constants": "~18.0.10",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.552.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-aria": "^3.33.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.0",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-svg": "^15.13.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20",
     "tailwindcss": "^3.4.17"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
+  }
 }
