--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-aria": "^3.33.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.14.0",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20",
