Perbaikian Public API

--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "@legendapp/motion": "^2.3.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~54.0.0",
-    "expo": "~54.0.29",
+    "expo": "~54.0.30",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.20",
+    "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.552.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-aria": "^3.33.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
