--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@gluestack-ui/themed": "^1.1.73",
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.3.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.89.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~54.0.0",
-    "expo": "~54.0.29",
+    "expo": "~54.0.30",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.20",
+    "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.552.0",
     "nativewind": "^4.1.23",
@@ -33,8 +35,9 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "^0.5.1",
+    "react-native-worklets": "0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20",
     "tailwindcss": "^3.4.17"
